// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test the expenses summary case with no expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    0
     
  </p>
</div>
`;

exports[`should test the expensesummary case with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    110500
     
  </p>
</div>
`;
